# onflow-stellar

./: .gitignore  README.md  firebase.json  index.html  package-lock.json  package.json  vite.config.js
mock-sdp-backend/: package-lock.json  package.json  server.js
onflow-stellar contracts/: README.md
onflow-stellar contracts/vaultsystem+vaultsharetoken/contracts/vault-share-token/: initialize_share_token.json
onflow-stellar contracts/vaultsystem+vaultsharetoken/contracts/vault-system/: Cargo.toml
onflow-stellar-contracts/usdc_token/contracts/usdc_token/: Cargo.toml
onflow-stellar-contracts/vaultsystem+vaultsharetoken/contracts/vault-share-token/: Cargo.toml
onflow-stellar-contracts/vaultsystem+vaultsharetoken/contracts/vault-share-token/src/: lib.rs  vault_share_token.rs
src/: App.css  App.jsx  firebase.js  index.css
src/components/: ConnectWallet.css  ConnectWallet.jsx  CreditReportModal.css  CreditReportModal.jsx  InvestorVaultCard.css  InvestorVaultCard.jsx  Navbar.css  Navbar.jsx  StatsCard.css  StatsCard.jsx  VaultCard.css  VaultCard.jsx
src/components/admin/: AddVaultManually.jsx  InitializeVault.css  InitializeVault.jsx
src/components/borrower/: BorrowerDashboard.jsx
src/pages/: AdminDashboard.css  AdminDashboard.jsx  BorrowPage.jsx  BorrowerDashboard.css  BorrowerDashboard.jsx  HomePage.css  HomePage.jsx  InvestorDashboard.css  InvestorDashboard.jsx  LoginPage.css  LoginPage.jsx  SdpDisbursementDemo.css  SdpDisbursementDemo.jsx  VaultPage.css  VaultPage.jsx
src/stores/: useWalletStore.js
(+6 files in other folders)
