[package]
name = "usdc_token"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "USDC-like token for Soroban"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "20.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
