[package]
name = "vault-share-token"
version = "0.1.0"
edition = "2021"
description = "OnFlow Stellar vault + share token + factory system"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"